# studio

./: .gitignore  Agent.elm  CHANGELOG.md  Commitment.elm  Contract.elm  Dockerfile  ES.elm  ErrorPage.elm  Event.elm  Instance.elm  Main.elm  Main.hs  Msg.elm  NotFound.elm  REA.elm  Resource.elm  Route.elm  Session.elm  Status.elm  build.sh  deploy.sh  docker-compose.local.yml  docker-compose.yml  index.html  main.css  ms.cabal  run.sh  rundev.sh  server.py
Page/: CommitmentTypes.elm  Error.elm  EventTypes.elm  Loading.elm  Navbar.elm  NotFound.elm  Process.elm  ProcessType.elm  ProcessTypes.elm  Processes.elm
REA/: Agent.elm  AgentType.elm  Commitment.elm  CommitmentType.elm  Contract.elm  ContractType.elm  Entity.elm  Event.elm  EventType.elm  Process.elm  ProcessCommitments.elm  ProcessEvents.elm  ProcessType.elm  ProcessTypeCommitmentType.elm  ProcessTypeEventType.elm  Resource.elm  ResourceType.elm
back/: CHANGELOG.md  Main.hs  build.sh  cabal.project  modelyz-studio.cabal  ms.cabal  rundev.sh  studio.cabal
back/src/: Event.hs  EventStore.hs  Main.hs  Message.hs  MessageStore.hs
front/: CHANGELOG.md  Msg.elm  analyse.sh  build.sh  elm.json  package.json  review.sh  run.sh  rundev.sh  runlive.sh
front/Page/: Error.elm  EventTypes.elm  ProcessType.elm  Processes.elm
front/src/: Configuration.elm  Connection.elm  DateTime.elm  ES.elm  Event.elm  EventFlow.elm  Events.elm  Expression.elm  Flow.elm  HomePage.elm  IOStatus.elm  (+22 more)
public/: .index.html.swp  app.js  index.html  main.css
static/: main.css
templates/: index.html
test/: Pipfile  test.py  test.sh
(+250 files in other folders)
